# MeshSimplificationFramework

./: .clang-format  .gitignore  CMakeLists.txt  README.md  command.txt
SimpleDecoder/: SimpleDecoder.cpp  SimpleEncoder.cpp  SimpleStrategy.cpp
SimpleDecoder/include/: SimpleEncoder.h
impl/QEM/: IsFlipOperator.h  QEMCompress.cpp
src/: EdgeCollapseFunc.h  MultiSimpleDump.cpp  MultiSimpleEncoder.cpp  MultiSimpleStrategy.cpp  Options.h  PMSF.cpp  PMSF.h  PartialSplitter.cpp  ProgressiveSimplificationFramework.cpp  ProgressiveSimplificationFramework.h  SimpleDump.cpp  SimpleEncoder.cpp
src/boundary/: BasicBoundaryCompressOperator.cpp  BasicBoundaryCompressOperator.h  BoundaryCompressOperator.h
src/common/: BufferUtils.h  DebugTool.h  Define.h  EntropyCodec.h  Graph.h
src/compress/: BasicSerializeOperator.cpp  BasicSerializeOperator.h  BasicSymbolCollectOperator.bak  BasicSymbolCollectOperator.cpp  BasicSymbolCollectOperator.h  SegmentationSerializeOperator.cpp  SegmentationSerializeOperator.h  SegmentationSymbolCollectOperator.cpp  SegmentationSymbolCollectOperator.h  SerializeOperator.h  SymbolCollectOperator.h
src/decompress/: BasicDeserializeOperator.cpp  BasicDeserializeOperator.h  BasicSymbolReadOperator.cpp  BasicSymbolReadOperator.h  DeserializeOperator.cpp  DeserializeOperator.h  SegmentationDeserializeOperator.cpp  SegmentationDeserializeOperator.h  SegmentationSymbolReadOperator.cpp  SegmentationSymbolReadOperator.h  SymbolReadOperator.h
src/elimination/: BoundaryVertexRemovalEliminateOperator.cpp  BoundaryVertexRemovalEliminateOperator.h  EdgeCollapseEliminateOperator.cpp  EdgeCollapseEliminateOperator.h  EliminateOperator.h  VertexRemovalEliminateOperator.cpp  VertexRemovalEliminateOperator.h
src/encoder/: EdgeCollapseFastQuardicEncoder.cpp  EdgeCollapseGreedyEncoder.h  EdgeCollapsePriorityErrorEncoder.h  VertexRemovalEncoder.cpp  VertexRemovalGreedyEncoder.cpp  VertexRemovalGreedyEncoder.h  VertexRemovalPriorityErrorEncoder.h
src/handler/: ProcessorRegistry.h  PropertyHandleWrapper.h  RegisterOpenMeshTraits.h  TypeTraitsRegistry.h
src/header/: BasicPMSFHeader.h  PMSFHeader.h
src/include/: MultiSimpleEncoder.h  PartialSplitter.h  SimpleDecoder.h  SimpleEncoder.h
src/operator/: BaseIsRemovableOperator.cpp  BasicIsRemovableOperator.cpp  BasicIsRemovableOperator.h  BoundaryCompressIsRemovableOperator.cpp  BoundaryCompressIsRemovableOperator.h  BoundaryIsRemovableOperator.h  CalculateErrorOperator.h  CustomerUpdatePropertiesOperator.cpp  CustomerUpdatePropertiesOperator.h  DefaultUpdatePropertiesOperator.cpp  DefaultUpdatePropertiesOperator.h  IsRemovableOperator.h  ManifoldIsRemovableOperator.cpp  ManifoldIsRemovableOperator.h  RegisterPropertiesOperator.cpp  SeedIsRemovableOperator.h  SeedOperator.h  UnifiedManifoldIsRemovableOperator.cpp  UnifiedManifoldIsRemovableOperator.h  UpdatePropertiesOperator.h  VertexBasedBoundaryIsRemovableOperator.h
src/options/: CompressOptions.h  DecompressOptions.h  SelectOptions.h
src/predict/: PredictOperator.h
src/quantization/: QuantizationOperator.h
src/rangecoder/: port.h  rangecod.c  rangecod.h
src/reconstruct/: BasicReconstructOpertator.h  BasicReconstrustOpertator.cpp  ReconstructOpertator.h
src/segmentation/: BasicSegmentOperator.cpp  BasicSegmentOperator.h  SegmentOperator.h  SegmentationOption.h  VertexSegmentOperator.cpp  VertexSegmentOperator.h
src/selection/: ErrorSource.h  HalfedgeSelectionQueue.h  PriorityErrorSelector.cpp  PriorityErrorSelector.h  SelectOperator.h
src1/: ProgressiveSimplificationFramework.cpp
src1/common/: Logutil.h  Options.h
src1/decoder/: VertexRemovalDecoder.h
src1/encoder/: EdgeCollapseFastQuardicEncoder.cpp  EdgeCollapseFastQuardicEncoder.h  EdgeCollapseGreedyEncoder.cpp  EdgeCollapsePriorityErrorEncoder.cpp  VertexRemovalEncoder.cpp  VertexRemovalEncoder.h  VertexRemovalGreedyEncoder.cpp  VertexRemovalGreedyEncoder.h
src1/operator/: BaseIsRemovableOperator.h  RegisterPropertiesOperator.h  SeedOperator.cpp  UpdatePropertiesOperator.cpp
src1/splitter/: PartialSplitter.cpp
tools/: DefaultCompress.cpp  DefaultDecompress.cpp  DefaultSegmentCompress.cpp  DefaultSegmentDecompress.cpp  FrameworkTest.cpp  MultiSimpleEncoderTest.cpp  PMSF_Test.cpp  SimpleDecoderTest.cpp  SimpleEncoderTest.cpp  main.cpp  main2.cpp
